# 3-axis-arm-package

arm_project/: CMakeLists.txt  package.xml
arm_project/config/: joint_names_GR-007-V1_urdf.yaml  joint_trajectory_controller.yaml
arm_project/launch/: arm_poject.launch  arm_project.launch.py  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
arm_project/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
arm_project/robot_description/: arm_project.csv  arm_project.urdf
arm_project/urdf/: arm_project.csv  arm_project.urdf
